[package]
name = "actix-ethers"
version = "0.1.0"
authors = ["YutaSugimura <nextc3m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.44"
dotenv = "0.15.0"
serde_json = "1.0.68"
env_logger = "0.9.0"

[dev-dependencies]
rand = "0.8.4"
serde = { version = "1.0.124", features = ["derive"] }

